--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Mar 29 2024 10:16:38 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Mar 29 2024 10:22:49 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6406dccaf769b85de9439d19" data-wf-site="6406dccaf769b8caaf439d15" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -47,14 +47,20 @@
       </div>
       <div class="g03_container">
         <div class="g03_gallery_column">
-          <div class="g03_gallery_column"></div>
-          <div class="g03_image_wrap"><img src="images/boostscape.webp" loading="lazy" sizes="(max-width: 479px) 88vw, (max-width: 767px) 86vw, 42vw" srcset="images/boostscape-p-500.webp 500w, images/boostscape-p-800.webp 800w, images/boostscape-p-1080.webp 1080w, images/boostscape-p-1600.webp 1600w, images/boostscape-p-2000.webp 2000w, images/boostscape.webp 2400w" alt="Boostscape" class="image">
-            <div class="g03_image_wrap"><img src="images/softhaven.webp" loading="lazy" sizes="(max-width: 479px) 86vw, (max-width: 767px) 82vw, 39vw" srcset="images/softhaven-p-500.webp 500w, images/softhaven-p-800.webp 800w, images/softhaven-p-1080.webp 1080w, images/softhaven-p-1600.webp 1600w, images/softhaven-p-2000.webp 2000w, images/softhaven.webp 2400w" alt="Softhaven" class="image"></div>
-          </div>
+          <div class="g03_image_wrap"><img src="images/boostscape.webp" loading="lazy" sizes="(max-width: 479px) 88vw, (max-width: 767px) 86vw, 42vw" srcset="images/boostscape-p-500.webp 500w, images/boostscape-p-800.webp 800w, images/boostscape-p-1080.webp 1080w, images/boostscape-p-1600.webp 1600w, images/boostscape-p-2000.webp 2000w, images/boostscape.webp 2400w" alt="Boostscape" class="image"></div>
+          <div class="g03_image_wrap"><img src="images/softhaven.webp" loading="lazy" sizes="(max-width: 479px) 88vw, (max-width: 767px) 86vw, 42vw" srcset="images/softhaven-p-500.webp 500w, images/softhaven-p-800.webp 800w, images/softhaven-p-1080.webp 1080w, images/softhaven-p-1600.webp 1600w, images/softhaven-p-2000.webp 2000w, images/softhaven.webp 2400w" alt="Softhaven" class="image"></div>
         </div>
         <div class="g03_gallery_column">
           <div class="g03_image_wrap"><img src="images/musatilaus.webp" loading="lazy" sizes="(max-width: 479px) 88vw, (max-width: 767px) 86vw, 42vw" srcset="images/musatilaus-p-500.webp 500w, images/musatilaus-p-800.webp 800w, images/musatilaus-p-1080.webp 1080w, images/musatilaus-p-1600.webp 1600w, images/musatilaus-p-2000.webp 2000w, images/musatilaus.webp 2400w" alt="Musatilaus" class="image"></div>
           <div class="g03_image_wrap"><img src="images/Blaa.webp" loading="lazy" sizes="(max-width: 479px) 88vw, (max-width: 767px) 86vw, 42vw" srcset="images/Blaa-p-500.webp 500w, images/Blaa-p-800.webp 800w, images/Blaa-p-1080.webp 1080w, images/Blaa-p-1600.webp 1600w, images/Blaa-p-2000.webp 2000w, images/Blaa.webp 2400w" alt="Blaa" class="image"></div>
+        </div>
+      </div>
+      <div class="g03_container">
+        <div class="g03_gallery_column">
+          <div class="g03_image_wrap"><img src="images/team-nanoksi.webp" loading="lazy" sizes="(max-width: 479px) 88vw, (max-width: 767px) 86vw, 42vw" srcset="images/team-nanoksi.webp 500w, images/team-nanoksi.webp 800w, images/team-nanoksi.webp 1080w, images/team-nanoksi.webp 1600w" alt="Team Nanoksi" class="image"></div>
+        </div>
+        <div class="g03_gallery_column">
+          <div class="g03_image_wrap"><img src="images/electric-way-finland.webp" loading="lazy" sizes="(max-width: 479px) 88vw, (max-width: 767px) 86vw, 42vw" srcset="images/electric-way-finland.webp 500w, images/electric-way-finland.webp 800w, images/electric-way-finland.webp 1080w, images/electric-way-finland.webp 1600w" alt="Electric Way Finland" class="image"></div>
         </div>
       </div>
       <div class="g03_container">
