--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Mar 29 2024 10:22:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Mar 30 2024 10:59:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6406dccaf769b85de9439d19" data-wf-site="6406dccaf769b8caaf439d15" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -57,10 +57,10 @@
       </div>
       <div class="g03_container">
         <div class="g03_gallery_column">
-          <div class="g03_image_wrap"><img src="images/team-nanoksi.webp" loading="lazy" sizes="(max-width: 479px) 88vw, (max-width: 767px) 86vw, 42vw" srcset="images/team-nanoksi.webp 500w, images/team-nanoksi.webp 800w, images/team-nanoksi.webp 1080w, images/team-nanoksi.webp 1600w" alt="Team Nanoksi" class="image"></div>
+          <div class="g03_image_wrap"><img src="images/team-nanoksi.webp" loading="lazy" sizes="(max-width: 479px) 88vw, (max-width: 767px) 86vw, 42vw" srcset="images/team-nanoksi-p-500.webp 500w, images/team-nanoksi-p-800.webp 800w, images/team-nanoksi-p-1080.webp 1080w, images/team-nanoksi.webp 1600w" alt="Team Nanoksi" class="image"></div>
         </div>
         <div class="g03_gallery_column">
-          <div class="g03_image_wrap"><img src="images/electric-way-finland.webp" loading="lazy" sizes="(max-width: 479px) 88vw, (max-width: 767px) 86vw, 42vw" srcset="images/electric-way-finland.webp 500w, images/electric-way-finland.webp 800w, images/electric-way-finland.webp 1080w, images/electric-way-finland.webp 1600w" alt="Electric Way Finland" class="image"></div>
+          <div class="g03_image_wrap"><img src="images/electric-way-finland.webp" loading="lazy" sizes="(max-width: 479px) 88vw, (max-width: 767px) 86vw, 42vw" srcset="images/electric-way-finland-p-500.webp 500w, images/electric-way-finland-p-800.webp 800w, images/electric-way-finland-p-1080.webp 1080w, images/electric-way-finland.webp 1600w" alt="Electric Way Finland" class="image"></div>
         </div>
       </div>
       <div class="g03_container">
@@ -128,7 +128,7 @@
         </div>
       </div><img src="images/nords-oy.webp" sizes="90vw" srcset="images/nords-oy-p-500.webp 500w, images/nords-oy-p-800.webp 800w, images/nords-oy-p-1080.webp 1080w, images/nords-oy-p-1600.webp 1600w, images/nords-oy-p-2000.webp 2000w, images/nords-oy.webp 2400w" alt="Nords Oy" class="feature_image">
       <div class="button_wrap">
-        <a href="https://www.nords.fi/yhteystiedot" target="_blank" class="button_clone w-button">Kiinnostuitko? Ota yhteyttä!</a>
+        <a href="https://www.nords.fi/ota-yhteytta" target="_blank" class="button_clone w-button">Kiinnostuitko? Ota yhteyttä!</a>
       </div>
     </div>
   </div>
